# motan-openresty

./: .gitignore  .luacheckrc  .travis.yml  Makefile  README.md  cluster.lua  consts.lua  dist.ini  init.lua  install  motan_ext.lua  run.sh  singletons.lua  uninstall  url.lua  utils.lua  valgrind.suppress
client/: client copy.lua  handler.lua  init.lua
cluster/: init.lua
config/: handle.lua  parse.lua  protocol.lua  referer.lua  save.lua
core/: ext.lua  gctx.lua  refhandler.lua  request.lua  response.lua  sysconf.lua
endpoint/: init.lua  motan.lua
examples/motan-service/: status.lua
examples/ngx_conf/: orcon.conf
examples/ngx_stream_conf/: orcon_stream.conf
filter/: accesslog.lua  metrics.lua
ha/: failover.lua  init.lua
lb/: init.lua  random.lua
lib/motan/: consts.lua  init.lua  (+5 more)
lib/motan/libs/cmotan/: CMakeLists.txt  README.md  build_by_docker.sh  test.lua
lib/motan/libs/cmotan/src/: buffer.c  buffer.h  buffer_unittest.c  motan.h  serialization.c  serialization.h  serialization_unittest.c
libs/: ffi.lua  libmotan_tools.dylib  motan_tools.c
ngx_conf/: orcon.conf
ngx_stream_conf/: orcon_stream.conf
protocol/: m2codec.lua  m2header.lua  m2protocol.lua  message.lua
provider/: init.lua  motan.lua
registry/: consul.lua  consul_service.lua  direct.lua  init.lua
scripts/: createapp  dorequire
serialize/: init.lua  simple.lua
server/: exporter.lua  handler.lua  init.lua  preread.lua  service.lua
t/: 000-sanity.t  001-utils.t  002-concurrent_call.t  002-helloworld.t  003-unpack_bug.t  004-simple-serialize.t  005-simple-deserialize.t  006-using-mesh.t  007-using-mesh-snapshot.t  00x-mockeagain.t
(+75 files in other folders)
